Refactor templates: Remove old indexO.html, create new layout.html, and update product forms and lists
- Deleted indexO.html and replaced it with a new layout.html for better structure and reusability.
- Created new product form (productos-form.html) with improved JavaScript for dynamic category selection.
- Added product list templates (productos-list.html, productos-list-admin.html) for displaying products with a sidebar and cart summary.
- Updated plantilla.html to include JavaScript fragment for better modularity.
- Removed unused plantilla file.

--- a/pom.xml
+++ b/pom.xml
@@ -53,11 +53,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- Esto es para que funcione el layout -->
 		<!-- https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect -->
 		<dependency>
 			<groupId>nz.net.ultraq.thymeleaf</groupId>
 			<artifactId>thymeleaf-layout-dialect</artifactId>
-			<version>3.3.0</version>
+			<version>3.1.0</version>
 		</dependency>
 
 		<dependency>
@@ -85,6 +86,25 @@
 
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.11.0</version> <!-- O usa una más reciente si quieres -->
+				<configuration>
+					<source>${21}</source>
+					<target>${21}</target>
+					<release>${21}</release>
+					<annotationProcessorPaths>
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>1.18.30</version> <!-- Asegúrate de que coincida con tu versión -->
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
+
+			<!--  -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
