clase usuario  agregada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.datasource.password=chuflitos1
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##Manera de crear las tablas
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.hibernate.ddl-auto=validate
-# spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create
 # spring.jpa.hibernate.ddl-auto=create-drop
 
 
