--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,18 @@
 spring.application.name=stella
 
 ##Conexion a base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/stella
+#spring.datasource.url=jdbc:mysql://localhost:3306/stella
+spring.datasource.url=jdbc:mysql://localhost:3306/stella?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=chuflitos1
+spring.datasource.password=Iseedeadpeople1
 
 ##Configuración de MYSQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 ##Manera de crear las tablas
-#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.hibernate.ddl-auto=create
 # spring.jpa.hibernate.ddl-auto=create-drop
 
 
