Refactor code structure for improved readability and maintainability, puse que se puedan fotos como archivo a los productos, arreglé la manera de eliminar el producto(primero se borra la foerta asociada) y luego el producto, en la pag principal se meustra la oferta solo si está activa, se creó una carpeta "uploads"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,14 @@ spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.hibernate.ddl-auto=create-drop
 
 
+# Manejo de subidas de archivos:
+spring.servlet.multipart.enabled=true
+# Tamaño máximo por archivo
+spring.servlet.multipart.max-file-size=10MB
+# Tamaño máximo de la solicitud completa
+spring.servlet.multipart.max-request-size=50MB
+# No funcionó xd :'v
+# spring.servlet.multipart.max-file-count is not a supported property and has been removed
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
