--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,47 +1,32 @@
-# spring.application.name=stella
+spring.application.name=stella
 
-# ##Conexion a base de datos
-# spring.datasource.url=jdbc:mysql://localhost:3306/stella
-# # spring.datasource.url=jdbc:mysql://localhost:3306/stella?createDatabaseIfNotExist=true
-# spring.datasource.username=root
-# spring.datasource.password=chuflitos1
+##Conexion a base de datos
+spring.datasource.url=jdbc:mysql://localhost:3306/stella
+# spring.datasource.url=jdbc:mysql://localhost:3306/stella?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=chuflitos1
 
-# ##Configuración de MYSQL
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# ##Manera de crear las tablas
-# spring.jpa.hibernate.ddl-auto=update
-# # spring.jpa.hibernate.ddl-auto=validate
-# # spring.jpa.hibernate.ddl-auto=create
-# # spring.jpa.hibernate.ddl-auto=create-drop
-
-
-# # Manejo de subidas de archivos:
-# spring.servlet.multipart.enabled=true
-# # Tamaño máximo por archivo
-# spring.servlet.multipart.max-file-size=10MB
-# # Tamaño máximo de la solicitud completa
-# spring.servlet.multipart.max-request-size=50MB
-# # No funcionó xd :'v
-# # spring.servlet.multipart.max-file-count is not a supported property and has been removed
-
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# # Para que no me tire un error que no es error xd:
-# # logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
-
-
-spring.datasource.url = jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-
-spring.datasource.username=${DB_USER}
-spring.datasource.password=${DB_PASSWORD}
-# Show or not log for each sql query
-spring.jpa.show-sql=true
-# Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
-# schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=update
-# Allows Hibernate to generate SQL optimized for a particular DBMS
+##Configuración de MYSQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+
+##Manera de crear las tablas
+spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.hibernate.ddl-auto=validate
+# spring.jpa.hibernate.ddl-auto=create
+# spring.jpa.hibernate.ddl-auto=create-drop
+
+
+# Manejo de subidas de archivos:
+spring.servlet.multipart.enabled=true
+# Tamaño máximo por archivo
+spring.servlet.multipart.max-file-size=10MB
+# Tamaño máximo de la solicitud completa
+spring.servlet.multipart.max-request-size=50MB
+# No funcionó xd :'v
+# spring.servlet.multipart.max-file-count is not a supported property and has been removed
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Para que no me tire un error que no es error xd:
+# logging.level.org.springframework.security.config.annotation.authentication.configuration.InitializeUserDetailsBeanManagerConfigurer=ERROR
