--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=stella
 spring.datasource.url=jdbc:mysql://localhost:3306/stella
 # spring.datasource.url=jdbc:mysql://localhost:3306/stella?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Iseedeadpeople1
+spring.datasource.password=chuflitos1
 
 ##Configuración de MYSQL
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
