Arreglo en el manejo de cierre de caja y otras correciones menores.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.application.name=stella
 ##Conexion a base de datos
 spring.datasource.url=jdbc:mysql://localhost:3306/stella
 # spring.datasource.url=jdbc:mysql://localhost:3306/stella?createDatabaseIfNotExist=true
+# spring.datasource.url=jdbc:mysql://stella-db:3306/stella?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=chuflitos1
 
